# aegis-trading

./: .coverage  .gitignore  pyproject.toml
configs/: agents_validated.yaml  backtest.yaml  backtest_debug.yaml  backtest_equity.yaml  lab.yaml  production.yaml
migrations/: 001_create_market_data.sql  002_create_fundamentals.sql  003_create_sentiment.sql  004_create_macro.sql  005_create_geopolitical.sql  006_create_leader_signals.sql  007_create_trades.sql  008_create_agent_signals.sql  009_create_agent_weights.sql  010_create_cohorts.sql  011_create_tournaments.sql  012_create_rl_predictions.sql  013_create_risk_reports.sql  014_create_agent_performance.sql  015_alter_macro.sql  016_alter_geopolitical.sql  017_alter_leader_signals.sql  018_create_crypto_metrics.sql  019_alter_trades_add_cohort_id.sql  020_alter_cohorts_add_lifecycle.sql  021_alter_tournaments_add_composite.sql  022_add_cohort_constraints.sql  023_alter_rl_predictions.sql  024_create_weight_update_log.sql  025_create_model_versions.sql  026_create_feature_importance.sql  027_create_regime_playbook.sql  028_create_retrospective_reports.sql  run_migrations.py
reports/: phase2_baseline.json  solo_backtest.json
scripts/: download_historical.py  phase2_baseline.py  setup_env.sh  solo_backtest.py  verify_phase0_providers.py
src/aegis/: main.py  scheduler.py
tests/: conftest.py
tests/backtest/: test_backtest_engine.py  test_backtest_metrics.py  test_data_loader.py  test_full_ensemble_backtest.py  test_report.py
tests/integration/: test_data_pipeline.py
tests/unit/: test_aggregator.py  test_db.py  (+81 more)
(+142 files in other folders)
